Move the css files to css folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <div class="card chop">
-    <img src="img-flex" src="http://placehold.it/320x240" alt="">
+    <img src="img-flex" src="https://placehold.it/320x240" alt="">
     <div class="island">
       <h2 class="card-title peta push-0">Giant robots</h2>
       <p>Smashing, crashing, bashing all,<br>Giant robots have reall gall.</br></p>
