--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
 
   <div class="card chop">
-    <img src="img-flex" src="https://placehold.it/320x240" alt="">
+    <img class="img-flex" src="https://placehold.it/320x240" alt="">
     <div class="island">
       <h2 class="card-title peta push-0">Giant robots</h2>
-      <p>Smashing, crashing, bashing all,<br>Giant robots have reall gall.</br></p>
+      <p>Smashing, crashing, bashing all,<br>Giant robots have reall gall.</p>
       <a class="btn" href="#">Destroy!</a>
     </div>
   </div>
